# binalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Makefile  binalyzer.cpp  binalyzer.hpp
